--- a/page5.html
+++ b/page5.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+    <div class="sus"><h2>Welcome to [Genshin Impact Character List] web site</h2></div>
+
     <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link" href="framework.html">Active</a>
-        <a class="flex-sm-fill text-sm-center nav-link " href="page2.html">Longer nav link</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="page3.html">Link</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="page4.html">Link</a>
-        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="page5.html">Link</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="framework.html">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link " href="page2.html">Characters</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="page3.html">Weapons</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="page4.html">Artefacts</a>
+        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="page5.html">Other Info</a>
       </nav>
       
    
