ce am facut la lectie

--- a/page2.html
+++ b/page2.html
@@ -45,101 +45,101 @@
     <div class="jos">
     <div class="container text-center">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6">
-          <div class="col1"><img src="PROJECT/albedo/Albedo_Icon.webp" width="100" alt="albedo"><h4>Albedo</h4></div>
+          <a href="albedo.html"><div class="col1"><img src="PROJECT/albedo/Albedo_Icon.webp" width="100" alt="albedo"><h4>Albedo</h4></div></a>
           <div class="col2"><img src="PROJECT/alhaitham/Alhaitham_Icon.webp" width="100" alt="albedo"><h4>Alhaitham</h4></div>
           <div class="col3"><img src="PROJECT/aloy/Aloy_Icon.webp" width="100" alt="albedo"><h4>Aloy</h4></div>
           <div class="col4"><img src="PROJECT/amber/Amber_Icon.webp" width="100" alt="albedo"><h4>Amber</h4></div>
           <div class="col5"><img src="PROJECT/arataki-itto/Arataki_Itto_Icon.webp" width="100" alt="albedo"><h4>Arataki Itto</h4></div>
-          <div class="col6">Arlecchino</div>
-          <div class="col7">Baizhu</div>
-          <div class="col8">Barbara</div>
-          <div class="col9">Beidou</div>
-          <div class="col0">Bennett</div>
-          <div class="col10">Candace</div>
-          <div class="col11">Charlotte</div>
-          <div class="col12">Chasca</div>
-          <div class="col13">Chevreuse</div>
-          <div class="col14">Chiori</div>
-          <div class="col15">Chongyun</div>
-          <div class="col16">Clorinde</div>
-          <div class="col17">Collei</div>
-          <div class="col18">Cyno</div>
-          <div class="col19">Dehya</div>
-          <div class="col20">Diluc</div>
-          <div class="col21">Diona</div>
-          <div class="col22">Dori</div>
-          <div class="col23">Emilie</div>
-          <div class="col24">Eula</div>
-          <div class="col25">Faruzan</div>
-          <div class="col26">Fischl</div>
-          <div class="col27">Freminet</div>
-          <div class="col28">Furina</div>
-          <div class="col29">Gaming</div>
-          <div class="col30">Ganyu</div>
-          <div class="col31">Gorou</div>
-          <div class="col32">Hu Tao</div>
-          <div class="col33">Jean</div>
-          <div class="col34">Kachina</div>
-          <div class="col35">Kaedehara Kazuha</div>
-          <div class="col36">Kaeya</div>
-          <div class="col37">Kamisato Ayaka</div>
-          <div class="col38">Kamisato Ayato</div>
-          <div class="col39">Kaveh</div>
-          <div class="col40">Keqing</div>
-          <div class="col41">Kinich</div>
-          <div class="col42">Kirara</div>
-          <div class="col43">Klee</div>
-          <div class="col44">Kujou Sara</div>
-          <div class="col45">Kuki Shinobu</div>
-          <div class="col46">Layla</div>
-          <div class="col47">Lisa</div>
-          <div class="col48">lynette</div>
-          <div class="col49">Lyney</div>
-          <div class="col50">Mika</div>
-          <div class="col51">Mona</div>
-          <div class="col52">Mualani</div>
-          <div class="col53">Nahida</div>
-          <div class="col54">Navia</div>
-          <div class="col55">Neuvillette</div>
-          <div class="col56">Nilou</div>
-          <div class="col57">Ningguang</div>
-          <div class="col58">Noelle</div>
-          <div class="col59">Ororon</div>
-          <div class="col60">Qiqi</div>
-          <div class="col61">Raiden Shogun</div>
-          <div class="col62">Razor</div>
-          <div class="col63">Rozaria</div>
-          <div class="col64">Sangonomiya Kokomi</div>
-          <div class="col65">Sayu</div>
-          <div class="col66">Sethos</div>
-          <div class="col67">Shenhe</div>
-          <div class="col68">Shikanoin Heizo</div>
-          <div class="col69">Sigewinne</div>
-          <div class="col70">Sucrose</div>
-          <div class="col71">Taraglia</div>
-          <div class="col72">Thoma</div>
-          <div class="col73">Tighnari</div>
-          <div class="col74">Traveler (Anemo)</div>
-          <div class="col75">Traveler (Dendro)</div>
-          <div class="col76">Traveler (Electro)</div>
-          <div class="col77">Traveler (Geo)</div>
-          <div class="col78">Traveler (Hydro)</div>
-          <div class="col79">Venti</div>
-          <div class="col80">Wanderer</div>
-          <div class="col81">Wriothesley</div>
-          <div class="col82">Xiangling</div>
-          <div class="col83">Xianyun</div>
-          <div class="col84">Xiao</div>
-          <div class="col85">Xilonen</div>
-          <div class="col86">Xingqiu</div>
-          <div class="col87">Xinyan</div>
-          <div class="col88">Yae Miko</div>
-          <div class="col89">Yanfei</div>
-          <div class="col90">Yaoyao</div>
-          <div class="col91">Yelan</div>
-          <div class="col92">Yoimiya</div>
-          <div class="col93">Yun Jin</div>
-          <div class="col94">Zoungli</div>
+          <div class="col6"><img src="PROJECT/arlecchino/Arlecchino_Icon.webp" width="100" alt="albedo"><h4>Arlecchino</div></h4>
+          <div class="col7"><img src="PROJECT/baizhu/Baizhu_Icon.webp" width="100" alt="albedo"><h4>Baizhu</div></h4>
+          <div class="col8"><img src="PROJECT/barbara/Barbara_Icon.webp" width="100" alt="albedo"><h4>Barbara</div></h4>
+          <div class="col9"><img src="PROJECT/Beidou/Beidou_Icon.webp" width="100" alt="albedo"><h4>Beidou</div></h4>
+          <div class="col10"><img src="PROJECT/bennett/Bennett_Icon.webp" width="100" alt="albedo"><h4>Bennett</div></h4>
+          <div class="col11"><img src="PROJECT/candace/Candace_Icon.webp" width="100" alt="albedo"><h4>Candace</div></h4>
+          <div class="col12"><img src="PROJECT/charlotte/Charlotte_Icon.webp" width="100" alt="albedo"><h4>Charlotte</div></h4>
+          <div class="col13"><img src="PROJECT/chasca/Chasca_Icon.webp" width="100" alt="albedo"><h4>Chasca</div></h4>
+          <div class="col14"><img src="PROJECT/chevreuse/Chevreuse_Icon.webp" width="100" alt="albedo"><h4>Chevreuse</div></h4>
+          <div class="col15"><img src="PROJECT/chiori/Chiori_Icon.webp" width="100" alt="albedo"><h4>Chiori</div></h4>
+          <div class="col16"><img src="PROJECT/chongyun/Chongyun_Icon.webp" width="100" alt="albedo"><h4>Chongyun</div></h4>
+          <div class="col17"><img src="PROJECT/clorinde/Clorinde_Icon.webp" width="100" alt="albedo"><h4>Clorinde</div></h4>
+          <div class="col18"><img src="PROJECT/collei/Collei_Icon.webp" width="100" alt="albedo"><h4>Collei</div></h4>
+          <div class="col19"><img src="PROJECT/cyno/Cyno_Icon.webp" width="100" alt="albedo"><h4>Cyno</div></h4>
+          <div class="col20"><img src="PROJECT/dehya/Dehya_Icon.webp" width="100" alt="albedo"><h4>Dehya</div></h4>
+          <div class="col21"><img src="PROJECT/diluc/Diluc_Icon.webp" width="100" alt="albedo"><h4>Diluc</div></h4>
+          <div class="col22"><img src="PROJECT/diona/Diona_Icon.webp" width="100" alt="albedo"><h4>Diona</div></h4>
+          <div class="col23"><img src="PROJECT/dori/Dori_Icon.webp" width="100" alt="albedo"><h4>Dori</div></h4>
+          <div class="col24"><img src="PROJECT/emilie/Emilie_Icon.webp" width="100" alt="albedo"><h4>Emilie</div></h4>
+          <div class="col25"><img src="PROJECT/eula/Eula_Icon.webp" width="100" alt="albedo"><h4>Eula</div></h4>
+          <div class="col26"><img src="PROJECT/faruzan/Faruzan_Icon.webp" width="100" alt="albedo"><h4>Faruzan</div></h4>
+          <div class="col27"><img src="PROJECT/fischl/Fischl_Icon.webp" width="100" alt="albedo"><h4>Fischl</div></h4>
+          <div class="col28"><img src="PROJECT/freminet/Freminet_Icon.webp" width="100" alt="albedo"><h4>Freminet</div></h4>
+          <div class="col29"><img src="PROJECT/furina/Furina_Icon.webp" width="100" alt="albedo"><h4>Furina</div></h4>
+          <div class="col30"><img src="PROJECT/gaming/Gaming_Icon.webp" width="100" alt="albedo"><h4>Gaming</div></h4>
+          <div class="col31"><img src="PROJECT/ganyu/Ganyu_Icon.webp" width="100" alt="albedo"><h4>Ganyu</div></h4>
+          <div class="col32"><img src="PROJECT/gorou/Gorou_Icon.webp" width="100" alt="albedo"><h4>Gorou</div></h4>
+          <div class="col33"><img src="PROJECT/hu-tao/Hu_Tao_Icon.webp" width="100" alt="albedo"><h4>Hu Tao</div></h4>
+          <div class="col34"><img src="PROJECT/jean/Jean_Icon.webp" width="100" alt="albedo"><h4>Jean</div></h4>
+          <div class="col35"><img src="PROJECT/kachina/Kachina_Icon.webp" width="100" alt="albedo"><h4>Kachina</div></h4>
+          <div class="col36"><img src="PROJECT/kaedehara-kazuha/Kaedehara_Kazuha_Icon.webp" width="100" alt="albedo"><h4>Kaedehara Kazuha</div></h4>
+          <div class="col37"><img src="PROJECT/kaeya/Kaeya_Icon.webp" width="100" alt="albedo"><h4>Kaeya</div></h4>
+          <div class="col38"><img src="PROJECT/kamisato-ayaka/Kamisato_Ayaka_Icon.webp" width="100" alt="albedo"><h4>Kamisato Ayaka</div></h4>
+          <div class="col39"><img src="PROJECT/kamisato-ayato/Kamisato_Ayato_Icon.webp" width="100" alt="albedo"><h4>Kamisato Ayato</div></h4>
+          <div class="col40"><img src="PROJECT/kaveh/Kaveh_Icon.webp" width="100" alt="albedo"><h4>Kaveh</div></h4>
+          <div class="col41"><img src="PROJECT/keqing/Keqing_Icon.webp" width="100" alt="albedo"><h4>Keqing</div></h4>
+          <div class="col42"><img src="PROJECT/kinich/Kinich_Icon.webp" width="100" alt="albedo"><h4>Kinich</div></h4>
+          <div class="col43"><img src="PROJECT/kirara/Kirara_Icon.webp" width="100" alt="albedo"><h4>Kirara</div></h4>
+          <div class="col44"><img src="PROJECT/klee/Klee_Icon.webp" width="100" alt="albedo"><h4>Klee</div></h4>
+          <div class="col45"><img src="PROJECT/kuki-shinobu/Kuki_Shinobu_Icon.webp" width="100" alt="albedo"><h4>Kujou Sara</div></h4>
+          <div class="col46"><img src="PROJECT/kulou-sara/Kujou_Sara_Icon.webp" width="100" alt="albedo"><h4>Kuki Shinobu</div></h4>
+          <div class="col47"><img src="PROJECT/layla/Layla_Icon.webp" width="100" alt="albedo"><h4>Layla</div></h4>
+          <div class="col48"><img src="PROJECT/lisa/Lisa_Icon.webp" width="100" alt="albedo"><h4>Lisa</div></h4>
+          <div class="col49"><img src="PROJECT/lynette/Lynette_Icon.webp" width="100" alt="albedo"><h4>lynette</div></h4>
+          <div class="col50"><img src="PROJECT/lyney/Lyney_Icon.webp" width="100" alt="albedo"><h4>Lyney</div></h4>
+          <div class="col51"><img src="PROJECT/mika/Mika_Icon.webp" width="100" alt="albedo"><h4>Mika</div></h4>
+          <div class="col52"><img src="PROJECT/mona/Mona_Icon.webp" width="100" alt="albedo"><h4>Mona</div></h4>
+          <div class="col53"><img src="PROJECT/mualani/Mualani_Icon.webp" width="100" alt="albedo"><h4>Mualani</div></h4>
+          <div class="col54"><img src="PROJECT/nahida/Nahida_Icon.webp" width="100" alt="albedo"><h4>Nahida</div></h4>
+          <div class="col55"><img src="PROJECT/navia/Navia_Icon.webp" width="100" alt="albedo"><h4>Navia</div></h4>
+          <div class="col56"><img src="PROJECT/neauvillette/Neuvillette_Icon.webp" width="100" alt="albedo"><h4>Neuvillette</div></h4>
+          <div class="col57"><img src="PROJECT/nilou/Nilou_Icon.webp" width="100" alt="albedo"><h4>Nilou</div></h4>
+          <div class="col58"><img src="PROJECT/ningguann/Ningguang_Icon.webp" width="100" alt="albedo"><h4>Ningguang</div></h4>
+          <div class="col59"><img src="PROJECT/noelle/Noelle_Icon.webp" width="100" alt="albedo"><h4>Noelle</div></h4>
+          <div class="col60"><img src="PROJECT/ororon/Ororon_Icon.webp" width="100" alt="albedo"><h4>Ororon</div></h4>
+          <div class="col61"><img src="PROJECT/qiqi/Qiqi_Icon.webp" width="100" alt="albedo"><h4>Qiqi</div></h4>
+          <div class="col62"><img src="PROJECT/raiden-shogun/Raiden_Shogun_Icon.webp" width="100" alt="albedo"><h4>Raiden Shogun</div></h4>
+          <div class="col63"><img src="PROJECT/razor/Razor_Icon.webp" width="100" alt="albedo"><h4>Razor</div></h4>
+          <div class="col64"><img src="PROJECT/rozaria/Rosaria_Icon.webp" width="100" alt="albedo"><h4>Rozaria</div></h4>
+          <div class="col65"><img src="PROJECT/sangonomya-koko,i/Sangonomiya_Kokomi_Icon.webp" width="100" alt="albedo"><h4>Sangonomiya Kokomi</div></h4>
+          <div class="col66"><img src="PROJECT/sayu/Sayu_Icon.webp" width="100" alt="albedo"><h4>Sayu</div></h4>
+          <div class="col67"><img src="PROJECT/sethos/Sethos_Icon.webp" width="100" alt="albedo"><h4>Sethos</div></h4>
+          <div class="col68"><img src="PROJECT/shenhe/Shenhe_Icon.webp" width="100" alt="albedo"><h4>Shenhe</div></h4>
+          <div class="col69"><img src="PROJECT/shikanoin-heizou/Shikanoin_Heizou_Icon.webp" width="100" alt="albedo"><h4>Shikanoin Heizo</div></h4>
+          <div class="col70"><img src="PROJECT/siqewinnw/Sigewinne_Icon.webp" width="100" alt="albedo"><h4>Sigewinne</div></h4>
+          <div class="col71"><img src="PROJECT/sucrrose/Sucrose_Icon.webp" width="100" alt="albedo"><h4>Sucrose</div></h4>
+          <div class="col72"><img src="PROJECT/tartaglia/Tartaglia_Icon.webp" width="100" alt="albedo"><h4>Taraglia</div></h4>
+          <div class="col73"><img src="PROJECT/thoma/Thoma_Icon.webp" width="100" alt="albedo"><h4>Thoma</div></h4>
+          <div class="col74"><img src="PROJECT/tighnari/Tighnari_Icon.webp" width="100" alt="albedo"><h4>Tighnari</div></h4>
+          <div class="col75"><img src="PROJECT/traveler/307183.png" width="100" alt="albedo"><h4>Traveler (Anemo)</div></h4>
+          <div class="col76"><img src="PROJECT/traveler/307183.png" width="100" alt="albedo"><h4>Traveler (Dendro)</div></h4>
+          <div class="col77"><img src="PROJECT/traveler/307183.png" width="100" alt="albedo"><h4>Traveler (Electro)</div></h4>
+          <div class="col78"><img src="PROJECT/traveler/307183.png" width="100" alt="albedo"><h4>Traveler (Geo)</div></h4>
+          <div class="col79"><img src="PROJECT/traveler/307183.png" width="100" alt="albedo"><h4>Traveler (Hydro)</div></h4>
+          <div class="col80"><img src="PROJECT/venti/Venti_Icon.webp" width="100" alt="albedo"><h4>Venti</div></h4>
+          <div class="col81"><img src="PROJECT/wanderer/Wanderer_Icon.webp" width="100" alt="albedo"><h4>Wanderer</div></h4>
+          <div class="col82"><img src="PROJECT/wriothesley/Wriothesley_Icon.webp" width="100" alt="albedo"><h4>Wriothesley</div></h4>
+          <div class="col83"><img src="PROJECT/xiangling/Xiangling_Icon.webp" width="100" alt="albedo"><h4>Xiangling</div></h4>
+          <div class="col84"><img src="PROJECT/xianyun/Xianyun_Icon.webp" width="100" alt="albedo"><h4>Xianyun</div></h4>
+          <div class="col85"><img src="PROJECT/xiao/Xiao_Icon.webp" width="100" alt="albedo"><h4>Xiao</div></h4>
+          <div class="col86"><img src="PROJECT/xilonen/Xilonen_Icon.webp" width="100" alt="albedo"><h4>Xilonen</div></h4>
+          <div class="col87"><img src="PROJECT/xingqiu/Xingqiu_Icon.webp" width="100" alt="albedo"><h4>Xingqiu</div></h4>
+          <div class="col88"><img src="PROJECT/xinyan/Xinyan_Icon.webp" width="100" alt="albedo"><h4>Xinyan</div></h4>
+          <div class="col89"><img src="PROJECT/yae-miko/Yae_Miko_Icon.webp" width="100" alt="albedo"><h4>Yae Miko</div></h4>
+          <div class="col90"><img src="PROJECT/yanfei/Yanfei_Icon.webp" width="100" alt="albedo"><h4>Yanfei</div></h4>
+          <div class="col91"><img src="PROJECT/yaoyao/Yaoyao_Icon.webp" width="100" alt="albedo"><h4>Yaoyao</div></h4>
+          <div class="col92"><img src="PROJECT/yelan/Yelan_Icon.webp" width="100" alt="albedo"><h4>Yelan</div></h4>
+          <div class="col93"><img src="PROJECT/yoimiya/Yoimiya_Icon.webp" width="100" alt="albedo"><h4>Yoimiya</div></h4>
+          <div class="col94"><img src="PROJECT/yun-jin/Yun_Jin_Icon.webp" width="100" alt="albedo"><h4>Yun Jin</div></h4>
+          <div class="col95"><img src="PROJECT/zhongli/Zhongli_Icon.webp" width="100" alt="albedo"><h4>Zoungli</div></h4>
         </div>
       </div>
     </div>
